package Triptop.Applicatie.controller;

import org.springframework.web.bind.annotation.RestController;

@RestController
public class BetalingController {
    
}
