package Triptop.Applicatie.model.betaling;

public enum BetalingsMethode {
    STRIPE,
    PAYPAL
}
