package Triptop.Applicatie.model.betaling;

public enum BetalingsStatus {
    GESTART,
    VOLTOOID,
    MISLUKT
}
